<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.build_a_hero.app.TestActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toStartOf="@+id/loadButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loadButton" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="396dp"
        android:text="@string/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/testText"
        android:layout_width="294dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50dp"
        android:hint="@string/lorem_text"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/loadData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loadData"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginBottom="317dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testText" />
</android.support.constraint.ConstraintLayout>
